# JETSCAPE-FNO

./: .gitignore  CMakeLists.txt
config/: jetscape_user_root_bulk_test.xml
fno_hydro/example/: CMakeLists.txt  fnoHydroTest.cc
fno_hydro/fno_module/: CMakeLists.txt  FnoHydro.cc  FnoHydro.h
fno_hydro/libtorch_example/: CMakeLists.txt  test.cc  test_load.cc
fno_hydro/root_bulk/: CMakeLists.txt  JetScapeRootBulkLinkDef.h  bulkRootWriter.cc  bulkTest.cc
